# FedStation-lib

./: Fedstation.py  README.md  RecieveModel.py  pyproject.toml  sample.txt  scheduleTasks.py  setup.cfg  test.txt
src/Fedstation/: EnsembleARIMA.py  Fedstation.py  RecieveModel.py  SendModel.py  constants.py
src/Fedstation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_Fedstation.py
