[metadata]
name = Fedstation
version = 0.0.5
author = KYKT
author_email = theconscienceofficial@gmail.com
description = privacy preserving framework for ML Applications 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TarangGarlapally/FedStation-lib
project_urls =
    Bug Tracker = https://github.com/TarangGarlapally/FedStation-lib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
